<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/base_form"
    android:background="#f0eff4">

    <!--充值-->

    <include layout="@layout/form_head" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp13"
        android:layout_marginStart="@dimen/dp13"
        android:layout_marginTop="@dimen/dp20"
        android:background="@drawable/shape_dialog"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="@dimen/dp24"
            android:text="付款金额"
            android:textColor="#222222"
            android:textSize="@dimen/sp24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp80"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="@dimen/dp13">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="￥"
                android:textColor="#222222"
                android:textSize="@dimen/sp32" />

            <EditText
                android:id="@+id/et_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_edit"
                android:inputType="numberDecimal"
                android:textColor="#222222"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/sp28" />
        </LinearLayout>

        <View style="@style/view_line_short" />


        <EditText
            android:id="@+id/et_remark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="@dimen/dp13"
            android:background="@null"
            android:hint="点击此处，添加收钱备注"
            android:textColor="#576b95"
            android:textColorHint="#576b95"
            android:textSize="@dimen/sp20" />

        <View
            style="@style/view_line"
            android:layout_marginTop="@dimen/dp20" />


        <Button
            android:id="@+id/btn_ok"
            style="@style/btn_ok"
            android:layout_marginBottom="@dimen/dp13"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="@dimen/dp53"
            android:text="@string/btn_ok" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_pay_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_content"
        android:textSize="@dimen/sp16" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom"
        android:paddingBottom="@dimen/dp115">

        <ImageView
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:src="@mipmap/icon_safe" />

        <TextView
            style="@style/tab1_profit_item_title"
            android:layout_marginStart="@dimen/dp13"
            android:text="@string/slogan" />
    </LinearLayout>

</LinearLayout>